# RayTracer_Mirror

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  example_output.cfg  example_output.txt
.github/workflows/: pipeline.yml
docs/: pr_format.md
docs/config/: camera_config.md  light_config.md  materials_config.md  shapes_config.md  sky_config.md
include/builder/: EntityBuilder.hpp
include/components/: Entity.hpp  IBSDF.hpp  ICamera.hpp  ILight.hpp  IMaterial.hpp  IPlugin.hpp  IPrimitive.hpp  ISky.hpp  ITexture.hpp  TransformDecorator.hpp
include/factory/: AFactory.hpp  CameraFactory.hpp  IFactory.hpp  LightFactory.hpp  MaterialFactory.hpp  PrimitiveFactory.hpp  SceneFactories.hpp  SkyFactory.hpp
include/libraries/: dlfcn.h
include/math/: AABB.hpp  Color.hpp  HitRecord.hpp  Interval.hpp  MathUtils.hpp  Matrix.hpp  Ray.hpp  Vector3D.hpp
include/parser/: ISettings.hpp  LibConfigSettings.hpp  PrimitiveSettings.hpp
include/parser/dlloader/: DLLoader.hpp  DLLoaderPlugin.hpp  IDLLoader.hpp
include/render/: FrameBuffer.hpp
scenes/: all.scene  bin.scene  box.scene  cult_of_the_spheres.scene  duck.scene  guardian_of_the_cone.scene  pyramid.scene  shear_moi_dessus.scene  torus.scene  triangle.scene
scripts/: coverage.sh
src/: CMakeLists.txt  main.cpp
src/cameras/: ACamera.hpp  CMakeLists.txt
src/cameras/perspective/: CMakeLists.txt  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/core/: CMakeLists.txt  Raytracer.cpp  Raytracer.hpp
src/core/camera/: ACamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/core/display/loading_bar/: LoadingBar.cpp  LoadingBar.hpp
src/core/image/: Image.cpp  Image.hpp
src/core/logging/: Logger.cpp  Logger.hpp
src/core/parser/: SceneParser.cpp  SceneParser.hpp
src/core/plugin_loader/: PluginLoader.cpp  PluginLoader.hpp
src/core/renderer/: Renderer.cpp  Renderer.hpp
src/core/scene/: PrimitiveList.cpp  PrimitiveList.hpp  Scene.cpp  Scene.hpp
src/core/scene/bvh/: BVHNode.cpp  BVHNode.hpp
src/lights/: CMakeLists.txt
src/lights/ambient_light/: AmbientLight.cpp  CMakeLists.txt
src/lights/directional_light/: CMakeLists.txt  DirectionalLight.cpp
src/lights/point_light/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
src/materials/: CMakeLists.txt
src/materials/commun/: AMaterial.hpp  CMakeLists.txt
src/materials/commun/bsdf/: ABSDF.hpp
src/materials/commun/bsdf/emissive/: EmissiveBSDF.cpp  EmissiveBSDF.hpp
src/materials/commun/bsdf/lambertian/: LambertianBSDF.cpp  LambertianBSDF.hpp
src/materials/commun/texture/: ImageTexture.hpp  SolidColor.hpp  Texture.hpp
src/materials/flat_color/: CMakeLists.txt
src/materials/flat_material/: CMakeLists.txt  FlatMaterial.cpp  FlatMaterial.hpp
src/materials/lambertian/: CMakeLists.txt  Lambertian.cpp  Lambertian.hpp
src/materials/light_material/: CMakeLists.txt  LightMaterial.cpp  LightMaterial.hpp
src/materials/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
src/materials/texture_save/: ImageTexture.hpp
src/materials/transparent/: CMakeLists.txt  Transparent.cpp  Transparent.hpp
src/math/: CMakeLists.txt  Matrix.cpp
src/primitives/: CMakeLists.txt
src/primitives/box/: Box.cpp  Box.hpp  CMakeLists.txt
src/primitives/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
src/primitives/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
src/primitives/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  MeshData.hpp
src/primitives/mesh/parser/: IMeshParser.hpp  ObjParser.cpp  ObjParser.hpp
src/primitives/plane/: CMakeLists.txt  Plane.cpp  Plane.hpp
src/primitives/sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
src/primitives/torus/: CMakeLists.txt  Torus.cpp  Torus.hpp
src/primitives/transform/: TransformDecorator.cpp
src/primitives/triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  TriangleExtern.cpp
src/skies/: CMakeLists.txt
src/skies/atmospheric_sky/: AtmosphericSky.cpp  AtmosphericSky.hpp  CMakeLists.txt
src/skies/commun/: ASky.hpp
src/skies/empty_sky/: CMakeLists.txt  EmptySky.cpp  EmptySky.hpp
src/skies/galaxy_sky/: CMakeLists.txt  GalaxySky.cpp  GalaxySky.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  core_tests.cpp
tests/lights/: CMakeLists.txt  lights_tests.cpp
tests/materials/: CMakeLists.txt  materials_tests.cpp
tests/math/: CMakeLists.txt  math_tests.cpp
tests/primitives/: CMakeLists.txt  cylinder_tests.cpp  sphere_tests.cpp  triangle_tests.cpp
tests/scene/: CMakeLists.txt  scene_tests.cpp
tests/skies/: CMakeLists.txt  skies_tests.cpp
